@@ -21,9 +21,8 @@ import org.apache.lucene.search.Collector;
 import org.apache.lucene.search.Sort;
 import org.apache.lucene.search.grouping.GroupDocs;
 import org.apache.lucene.search.grouping.SearchGroup;
-import org.apache.lucene.search.grouping.term.TermAllGroupsCollector;
-import org.apache.lucene.search.grouping.term.TermSecondPassGroupingCollector;
 import org.apache.lucene.search.grouping.TopGroups;
+import org.apache.lucene.search.grouping.term.TermSecondPassGroupingCollector;
 import org.apache.lucene.util.BytesRef;
 import org.apache.solr.schema.SchemaField;
 import org.apache.solr.search.grouping.Command;
@@ -35,7 +34,7 @@ import java.util.Collections;
 import java.util.List;
 
 /**
- *
+ * Defines all collectors for retrieving the second phase and how to handle the collector result.
  */
 public class TopGroupsFieldCommand implements Command<TopGroups<BytesRef>> {
 
@@ -48,7 +47,6 @@ public class TopGroupsFieldCommand implements Command<TopGroups<BytesRef>> {
     private Integer maxDocPerGroup;
     private boolean needScores = false;
     private boolean needMaxScore = false;
-    private boolean needGroupCount = false;
 
     public Builder setField(SchemaField field) {
       this.field = field;
@@ -85,18 +83,13 @@ public class TopGroupsFieldCommand implements Command<TopGroups<BytesRef>> {
       return this;
     }
 
-    public Builder setNeedGroupCount(Boolean needGroupCount) {
-      this.needGroupCount = needGroupCount;
-      return this;
-    }
-
     public TopGroupsFieldCommand build() {
       if (field == null || groupSort == null ||  sortWithinGroup == null || firstPhaseGroups == null ||
           maxDocPerGroup == null) {
         throw new IllegalStateException("All required fields must be set");
       }
 
-      return new TopGroupsFieldCommand(field, groupSort, sortWithinGroup, firstPhaseGroups, maxDocPerGroup, needScores, needMaxScore, needGroupCount);
+      return new TopGroupsFieldCommand(field, groupSort, sortWithinGroup, firstPhaseGroups, maxDocPerGroup, needScores, needMaxScore);
     }
 
   }
@@ -108,10 +101,7 @@ public class TopGroupsFieldCommand implements Command<TopGroups<BytesRef>> {
   private final int maxDocPerGroup;
   private final boolean needScores;
   private final boolean needMaxScore;
-  private final boolean needGroupCount;
-
   private TermSecondPassGroupingCollector secondPassCollector;
-  private TermAllGroupsCollector allGroupsCollector;
 
   private TopGroupsFieldCommand(SchemaField field,
                                 Sort groupSort,
@@ -119,8 +109,7 @@ public class TopGroupsFieldCommand implements Command<TopGroups<BytesRef>> {
                                 Collection<SearchGroup<BytesRef>> firstPhaseGroups,
                                 int maxDocPerGroup,
                                 boolean needScores,
-                                boolean needMaxScore,
-                                boolean needGroupCount) {
+                                boolean needMaxScore) {
     this.field = field;
     this.groupSort = groupSort;
     this.sortWithinGroup = sortWithinGroup;
@@ -128,7 +117,6 @@ public class TopGroupsFieldCommand implements Command<TopGroups<BytesRef>> {
     this.maxDocPerGroup = maxDocPerGroup;
     this.needScores = needScores;
     this.needMaxScore = needMaxScore;
-    this.needGroupCount = needGroupCount;
   }
 
   public List<Collector> create() throws IOException {
@@ -141,11 +129,6 @@ public class TopGroupsFieldCommand implements Command<TopGroups<BytesRef>> {
           field.getName(), firstPhaseGroups, groupSort, sortWithinGroup, maxDocPerGroup, needScores, needMaxScore, true
     );
     collectors.add(secondPassCollector);
-    if (!needGroupCount) {
-      return collectors;
-    }
-    allGroupsCollector = new TermAllGroupsCollector(field.getName());
-    collectors.add(allGroupsCollector);
     return collectors;
   }
 
@@ -155,11 +138,7 @@ public class TopGroupsFieldCommand implements Command<TopGroups<BytesRef>> {
       return new TopGroups<BytesRef>(groupSort.getSort(), sortWithinGroup.getSort(), 0, 0, new GroupDocs[0]);
     }
 
-    TopGroups<BytesRef> result = secondPassCollector.getTopGroups(0);
-    if (allGroupsCollector != null) {
-      result = new TopGroups<BytesRef>(result, allGroupsCollector.getGroupCount());
-    }
-    return result;
+    return secondPassCollector.getTopGroups(0);
   }
 
   public String getKey() {
